Ignore calls to SatisfySequence if CanvasSurfaceLayerBridge is gone

Since SatisfySequence is post-tasked, under certain race conditions it's
possible that CanvasSurfaceLayerBridge is gone when it's called. Simply
ignore the call in that case. Note that RequireSequence is not PostTasked
so I expect bridge_ to exist.

BUG=720188

Review-Url: https://codereview.chromium.org/2911643004
Cr-Commit-Position: refs/heads/master@{#475378}

Former-commit-id: d5bf6c6f5651782d2fe6db6194d7e9776e2aff35